# sente

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  package-lock.json  railway.json  render.yaml
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  pyproject.toml  requirements.txt  sente.db
backend/app/: config.py  database.py  main.py  observability.py  retry.py
backend/app/data/: taxonomy.py
backend/app/models/: db.py
backend/app/parsers/: llm_parser.py  orchestrator.py  pdf_importer.py  regex_parser.py
backend/app/schemas/: transaction.py
backend/app/services/: categorizer.py  chat_agent.py  embeddings.py  ingest.py  tools.py
backend/evals/: README.md  categorizer_eval.py  labeled_set.json  labeled_set.py  metrics.py  parser_eval.py
backend/evals/results/: categorizer_eval.json  categorizer_eval.txt  parser_eval_real_fixtures.json  parser_eval_real_fixtures.txt  parser_eval_synthetic.json  parser_eval_synthetic.txt
backend/scripts/: regenerate_labeled_set.py  run_categorizer_eval.py  run_parser_eval.py
backend/tests/: conftest.py  fixtures_airtel.py  test_integration.py  test_pdf_importer.py  test_received_money_template.py  test_regex_parser.py
frontend/: .env.local.example  .env.production.example  README.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-nav.tsx  category-badge.tsx  chat-panel.tsx  clerk-provider.tsx  client-only.tsx  dashboard.tsx  kingfisher.tsx  (+5 more)
(+24 files in other folders)
