[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langsmith>=0.2.0",
    "lxml>=5.3.0",
    "numpy>=2.0.0",
    "pdfplumber>=0.11.4",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.12",
    "sentence-transformers>=3.3.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]
